fixed question on mobiles

--- a/app/sass/responsive.scss
+++ b/app/sass/responsive.scss
@@ -1481,7 +1481,13 @@
 				right: 6px;
 			}
 		}
-		&:hover,
+		&:hover{
+			background-position: 0 0;
+			span{
+				opacity: 0;
+				z-index: -1;
+			}
+		}
 		&.js-visible{
 			background-position: 0 -42px;
 			span{
